fixed project details width on mobiles < 400px wide.

--- a/styles/message.css
+++ b/styles/message.css
@@ -9,7 +9,7 @@
   margin:0;
   padding: 1rem;
   max-width: 80%;
-  max-height: 80%;
+  min-width: 250px;
   width: fit-content;
   height: fit-content;
   background-color: #aaaaaa;
